--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,7 @@
 
 /* Nav-Bar */
 #nav-bar { height: 50px; background-color: #ccc; box-shadow: 5px 0px 1px 5px #ccc; }
-	#nav-bar > #button > input[type=button] { display: inline-block; padding: 10px; margin-right: 5px; color: #fff; float: right; width: 80px; border: none; border: 1px solid #ddd; border-bottom: 4px solid #ddd; cursor: pointer; background-color: #c55; }
-	#nav-bar > #button > a { font-size: 16px; display: inline-block; padding: 10px; margin-right: 5px; color: #fff; float: right; width: 80px; border: none; border: 1px solid #ddd; border-bottom: 4px solid #ddd; cursor: pointer; background-color: #c55; }	
+	#nav-bar > #button > a > input[type=button] { display: inline-block; padding: 10px; margin-right: 5px; color: #fff; float: right; width: 80px; border: none; border: 1px solid #ddd; border-bottom: 4px solid #ddd; cursor: pointer; background-color: #c55; }
 
 /* Formulaire */
 #form { height: auto; background: #fff; padding-bottom: 55px; padding: 10px; border-bottom: 1px solid #ccc;}
