--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,500");
+@font-face { font-family: 'pixel'; src: url('../font/pixel.ttf');}
 
 html { height: 100%;}
 body { height: 100%; margin: 0px; font-size: 0px; background-color: #fff;}
